<resources>
    <string name="app_name">PetCare</string>
    <string name="intro_1">Selamat Datang di PetCare</string>
    <string name="tv_onboarding_title_1">Rencanakan</string>
    <string name="tv_onboarding_description_1">Setiap berapa jam kah hewan peliharaanmu akan diberikan makanan secara otomatis?</string>
    <string name="tv_onboarding_title_2">Jadwalkan</string>
    <string name="tv_onboarding_description_2">Pada hari apa saja kah kamu tidak bisa memberikan makanan kepada hewan peliharaanmu?</string>
    <string name="tv_onboarding_title_3">Tinggalkan</string>
    <string name="tv_onboarding_description_3">Jangan khawatir. Dengan konfigurasimu, PetCare siap mengurus hewan peliharaanmu!</string>
    <string name="btn_onboarding_next_screen">Selanjutnya</string>
    <string name="btn_onboarding_finish">Mulai</string>
    <string name="tv_register_title">Buat akun baru</string>
    <string name="tv_hint_username">Username</string>
    <string name="et_register_hint_username">johndoe887</string>
    <string name="tv_hint_email">E-mail</string>
    <string name="et_hint_email">johndoe887@gmail.com</string>
    <string name="tv_hint_phone">Phone (+62)</string>
    <string name="et_register_hint_phone">8773224817</string>
    <string name="tv_hint_password">Password</string>
    <string name="et_hint_password">RanG3net!c</string>
    <string name="btn_register">Daftar</string>
    <string name="tv_register_have_account">Sudah punya akun?</string>
    <string name="tv_register_goto_login">Masuk sekarang!</string>
    <string name="tv_login_title">Masuk ke akun lama</string>
    <string name="btn_login">Masuk</string>
    <string name="tv_login_no_account">Belum ada akun?</string>
    <string name="tv_login_goto_register">Daftar sekarang!</string>
    <string name="toast_register_empty_field">Masih ada data yang kosong</string>
    <string name="toast_register_invalid_username">Username harus berjumlah 5 – 21 karakter</string>
    <string name="toast_register_invalid_sn">Nomor serial number tidak valid</string>
    <string name="toast_register_invalid_email">Email tidak valid</string>
    <string name="toast_register_invalid_password">Password harus berjumlah 8 – 16 karakter</string>
    <string name="toast_register_create_account_successful">Akun berhasil dibuat!</string>
    <string name="toast_register_create_account_fail">Terjadi kesalahan</string>
    <string name="toast_login_invalid_email_password">Input email atau password tidak valid</string>
    <string name="toast_login_successful">Login berhasil dilakukan!</string>
    <string name="toast_login_fail">Terjadi kesalahan</string>
    <string name="btn_logout">Log Out</string>
    <string name="tv_profile_email">Email</string>
    <string name="tv_profile_username">Username</string>
    <string name="tv_profile_sn">Serial Number</string>
    <string name="tv_setting">Setting</string>
    <string name="sw_notification">Notifications</string>
    <string name="sw_alarm">Alarm</string>
    <string name="notification_days_title">Notification</string>
    <string name="tv_hint_sn">Serial Number</string>
    <string name="et_register_hint_sn">AAAAA000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pet_name">Pet Name</string>
    <string name="collar_serial_number">Collar Serial Number</string>
    <string name="name">Name</string>
    <string name="enter_your_pet_names_if_you_have_more_than_one_use_comma_to_separated_them">Enter your pet names. If you have more than one, use comma to separated them.</string>
    <string name="hint_serial_collar_name">Enter your collar serial number for yout pet. If you have more than one, use comma to separated them.</string>
    <string name="enter_your_data">Enter your data</string>
    <string name="serial_number">Serial Number</string>
</resources>