<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="622dp" />

    <ImageView
        android:id="@+id/image_register_logo"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_petcare_logo" />

    <TextView
        android:id="@+id/text_register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_reguler"
        android:gravity="center"
        android:text="@string/tv_register_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_register_logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_general_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor1" />

    <TextView
        android:id="@+id/text_hint_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_reguler"
        android:padding="15dp"
        android:text="@string/tv_hint_username"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_username"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textbox"
        android:fontFamily="@font/lato_reguler"
        android:hint="@string/et_register_hint_username"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_unselected"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/text_hint_username"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor1" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="text_hint_username, edit_register_username"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor1" />

    <TextView
        android:id="@+id/text_hint_phone"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_reguler"
        android:padding="15dp"
        android:text="@string/tv_hint_phone"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_phone"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textbox"
        android:fontFamily="@font/lato_reguler"
        android:hint="@string/et_register_hint_phone"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_unselected"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/text_hint_username"
        app:layout_constraintTop_toBottomOf="@id/edit_register_username" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="text_hint_phone, edit_register_phone"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_register_username" />

    <TextView
        android:id="@+id/text_hint_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_reguler"
        android:padding="15dp"
        android:text="@string/tv_hint_email"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_email"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textbox"
        android:fontFamily="@font/lato_reguler"
        android:hint="@string/et_hint_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_unselected"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/text_hint_phone"
        app:layout_constraintTop_toBottomOf="@id/edit_register_phone" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="text_hint_email, edit_register_email"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_register_phone" />

    <TextView
        android:id="@+id/text_hint_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_reguler"
        android:padding="15dp"
        android:text="@string/tv_hint_password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textbox"
        android:fontFamily="@font/lato_reguler"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_unselected"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/text_hint_email"
        app:layout_constraintTop_toBottomOf="@id/edit_register_email" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="text_hint_password, edit_register_password"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_register_email" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_button"
        android:fontFamily="@font/lato_reguler"
        android:gravity="center"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_register_password" />

    <TextView
        android:id="@+id/text_register_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_reguler"
        android:gravity="center"
        android:text="@string/tv_register_have_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register" />

    <TextView
        android:id="@+id/text_register_goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/lato_reguler"
        android:gravity="center"
        android:text="@string/tv_register_goto_login"
        android:textColor="@color/blue_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_register_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>